<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rizqanmr.mydoctor.SignInActivity">

    <ImageView
        android:id="@+id/ivMyDoctorLogosignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_logo_app"
        android:layout_marginTop="@dimen/spacing_40"
        android:layout_marginStart="@dimen/spacing_40"/>

    <TextView
        android:id="@+id/tvLabelKonsultasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_155"
        android:paddingStart="@dimen/spacing_40"
        android:paddingEnd="@dimen/spacing_167"
        android:text="@string/label_masuk_dan_mulai"
        android:textSize="@dimen/font_20"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvEmailAddres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelKonsultasi"
        android:paddingStart="@dimen/spacing_40"
        android:paddingEnd="0dp"
        android:layout_marginTop="@dimen/spacing_40"
        android:labelFor="@id/etEmail"
        android:text="@string/label_email_address"
        android:textSize="@dimen/font_16"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailAddres"
        android:layout_marginTop="@dimen/spacing_6"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginEnd="@dimen/spacing_40"
        android:autofillHints="@string/label_email_address"
        android:inputType="textEmailAddress"
        android:background="@drawable/ic_bg_rectangle_white"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:paddingStart="@dimen/spacing_40"
        android:paddingEnd="0dp"
        android:layout_marginTop="@dimen/spacing_24"
        android:labelFor="@id/etPassword"
        android:text="@string/label_password"
        android:textSize="@dimen/font_16"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        android:layout_marginTop="@dimen/spacing_6"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginEnd="@dimen/spacing_40"
        android:inputType="textPassword"
        android:autofillHints="@string/label_password"
        android:background="@drawable/ic_bg_rectangle_white"/>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:paddingStart="@dimen/spacing_40"
        android:paddingEnd="0dp"
        android:layout_marginTop="@dimen/spacing_10"
        android:text="@string/label_forgot_password"
        android:textSize="@dimen/font_12" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvCreateNewAccount"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginEnd="@dimen/spacing_40"
        android:layout_marginBottom="@dimen/spacing_30"
        android:textAllCaps="false"
        android:text="@string/label_btn_sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        android:background="@drawable/bg_rounded_corner_teal"
        android:backgroundTint="@color/my_doctor_500"/>

    <TextView
        android:id="@+id/tvCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/spacing_64"
        android:text="@string/label_create_new_account"
        android:textSize="@dimen/font_16"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>