<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_getstarted"
    tools:context="com.rizqanmr.mydoctor.GetStartedActivity">

    <ImageView
        android:id="@+id/ivMyDoctorLogoGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_logo_app"
        android:layout_marginTop="@dimen/spacing_40"
        android:layout_marginStart="@dimen/spacing_40"/>

    <TextView
        android:id="@+id/tvLabelKonsultasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_206"
        android:paddingStart="@dimen/spacing_40"
        android:paddingEnd="@dimen/spacing_85"
        android:textColor="@color/white"
        android:text="@string/label_get_started_konsultasi"
        android:textSize="@dimen/font_28"/>

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginEnd="@dimen/spacing_40"
        android:layout_marginBottom="@dimen/spacing_16"
        app:layout_constraintBottom_toTopOf="@id/btnSignIn"
        android:text="@string/label_btn_get_started"
        android:background="@drawable/bg_rounded_corner_teal"
        android:textSize="@dimen/font_18"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginEnd="@dimen/spacing_40"
        android:layout_marginBottom="@dimen/spacing_44"
        android:text="@string/label_btn_sign_in"
        android:textSize="@dimen/font_18"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>